# rinha-backend-rs

./: Cargo.toml
src/: main.rs
